--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -144,27 +144,21 @@ From there, the blog goes on to deliver popular summaries of two recent arXiv pa
 
 IBM Quantum documentation recently added a number of user-facing improvements, including content updates and new features. Many of these changes are a result of specific user requests! Check out the highlights below.
 
-### New and updated content
+### Updated content
 
 **New pages**
 
 New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide on [job limits](/guides/job-limits). 
 
-Qiskit Functions guides:
 
-- [Introduction](/guides/functions)
-- Circuit functions
-    - [IBM Circuit function](/guides/ibm-circuit-function)
-    - [Algorithmiq TEM function](/guides/algorithmiq-tem)
-    - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
-    - [Qedma QESEM](/guides/qedma-qesem)
-- Application functions
-    - [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
-    - [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
-
-Qiskit Code Assistant guides:
-
-- [Overview](/guides/qiskit-code-assistant)
+- Qiskit Functions [Introduction](/guides/functions)
+- [IBM Circuit function](/guides/ibm-circuit-function)
+- [Algorithmiq TEM function](/guides/algorithmiq-tem)
+- [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
+- [Qedma QESEM](/guides/qedma-qesem)
+- [Q-CTRL Optimization Solver](/guides/q-ctrl-optimization-solver)
+- [QunaSys QURI Chemistry](/guides/qunasys-quri-chemistry)
+- Qiskit Code Assistant [Overview](/guides/qiskit-code-assistant)
 - [Use Qiskit Code Assistant in JupyterLab](/guides/qiskit-code-assistant-jupyterlab)
 - [Use Qiskit Code Assistant in Visual Studio Code](/guides/qiskit-code-assistant-vscode)
 
@@ -182,9 +176,7 @@ Qiskit Code Assistant guides:
 
 - Information on [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
 
-- The [Introduction to Qiskit](/guides#introduction-to-qiskit) page is now more navigable with the addition of a right-hand nav 
-
-- Copyediting and typo fixes across the docs, including bugs reported by community contributors
+- Copyediting and typo fixes across the docs, including bugs reported by open-source contributors - thank you!
 
 **New API reference docs**
 
@@ -196,14 +188,12 @@ Qiskit Code Assistant guides:
 
 Updates to the infrastructure and design of the docs include the following:
 
-- We fixed GitHub source code links for functions using decorators - thanks to the external contributor who opened an issue for this!
+- We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
 - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
-- We fixed several broken links in historical API docs.
-- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available. The banner also now persists as you scroll down the page.
-- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler)
-- Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program)
-- Tips on how to use the Qiskit Code Assistant now appear throughout the guides
-- Narrow tables no longer take up extra wasted space
+- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available. The banner persists as you scroll down the page.
+- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler).
+- Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
+- Tips on how to use the Qiskit Code Assistant now appear throughout the guides.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
