--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -148,11 +148,10 @@ IBM Quantum documentation recently added a number of user-facing improvements, i
 
 **New pages**
 
-New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide on [job limits](/guides/job-limits). 
-
+New pages include documentation for [Qiskit Functions](/guides/functions), [Qiskit addons](/guides/addons), and [Qiskit Code Assistant](/guides/qiskit-code-assistant), as well as a guide about [job limits](/guides/job-limits). 
 
 - Qiskit Functions [Introduction](/guides/functions)
-- [IBM Circuit function](/guides/ibm-circuit-function)
+- [IBM&reg; Circuit function](/guides/ibm-circuit-function)
 - [Algorithmiq TEM function](/guides/algorithmiq-tem)
 - [Q-CTRL Performance Management](/guides/q-ctrl-performance-management)
 - [Qedma QESEM](/guides/qedma-qesem)
@@ -164,9 +163,9 @@ New pages include documentation for [Qiskit Functions](/guides/functions), [Qisk
 
 **Content additions and improvements**
 
-- Added content to the [Execution modes](/guides/execution-modes) documentation guides and improved explanatory content in the Introduction to primitives](/guides/primitives) page
+- Added content to the [Execution modes](/guides/execution-modes) guides and improved explanatory content in the [Introduction to primitives](/guides/primitives) page
 
-- Clarity around how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
+- Clarified how the [Estimator primitive calculates error](/guides/primitive-input-output#how-the-estimator-calculates-error)
 
 - A new [FAQ](/faq) page
 
@@ -174,26 +173,25 @@ New pages include documentation for [Qiskit Functions](/guides/functions), [Qisk
 
 - Some error codes now link out to relevant documentation ([example](/errors#8055))
 
-- Information on [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
+- Information about [benchmarking and the Benchpress package](/guides#benchmarking-and-the-benchpress-package)
 
-- Copyediting and typo fixes across the docs, including bugs reported by open-source contributors - thank you!
+- Copyediting and typo fixes across the documentation, including bugs reported by open-source contributors - thank you!
 
-**New API reference docs**
+**New API reference documentation**
 
 - [qiskit-ibm-runtime 0.29-0.31](/api/qiskit-ibm-runtime/release-notes)
 - [qiskit-ibm-transpiler 0.7](/api/qiskit-ibm-transpiler/release-notes)
 
-
 ### User experience improvements
 
-Updates to the infrastructure and design of the docs include the following:
+Updates to the infrastructure and design of the documentation include the following:
 
 - We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
 - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
-- We improved the design and color of the warning banner for when you access outdated API pages to make it easier to realize that newer docs are available. The banner persists as you scroll down the page.
-- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API docs](/api/qiskit-ibm-transpiler).
+- We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
+- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API documentation](/api/qiskit-ibm-transpiler).
 - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
-- Tips on how to use the Qiskit Code Assistant now appear throughout the guides.
+- Tips to use the Qiskit Code Assistant now appear throughout the guides.
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
