Use sentence case capitalization for API names

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -35,9 +35,9 @@ For more details, read the post about the release on the [IBM Quantum blog](http
 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-### Qiskit Runtime Client 0.28.0
+### Qiskit Runtime client 0.28.0
 
-*To see the release notes for all versions, visit the [Qiskit Runtime Client release notes](/api/qiskit-ibm-runtime/release-notes).*
+*To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
 **Highlights from the 0.28.0 (2024-08-15) version release**
 
@@ -53,7 +53,7 @@ For more details, read the post about the release on the [IBM Quantum blog](http
 See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2024-08-15).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
-### Qiskit Transpiler Service Client v0.3.0
+### Qiskit Transpiler Service client v0.3.0
 
 We’re pleased to share that the beta release of the Qiskit Transpiler Service is now available to all IBM Quantum&trade; Premium Plan users.
 
@@ -63,7 +63,7 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 {/* no other release notes available yet */}
 
-### Qiskit Functions Catalog Service Client v0.1.0
+### Qiskit Functions Catalog Service client v0.1.0
 
 Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](/guides/functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
 
@@ -189,7 +189,7 @@ Updates to the infrastructure and design of the documentation include the follow
 - We fixed GitHub source code links for functions using decorators - thanks to the open-source contributor who opened an issue for this!
 - When you change the version in the left sidebar of the API reference docs, you arrive at the equivalent page in the new version. If the page does not exist in the new version, you land on the index page.
 - We improved the design and color of the warning banner for when you access outdated API pages to make it more obvious that newer docs are available. The banner persists as you scroll down the page.
-- Source code links and release notes have been added to the [Qiskit Transpiler Service Client API documentation](/api/qiskit-ibm-transpiler).
+- Source code links and release notes have been added to the [Qiskit Transpiler Service client API documentation](/api/qiskit-ibm-transpiler).
 - Code blocks that write to a file now display the file path; see examples in this [Qiskit Serverless guide](/guides/serverless-first-program).
 - Tips to use the Qiskit Code Assistant now appear throughout the guides.
 
