--- a/docs/api/qiskit-addon-cutting/release-notes.mdx
+++ b/docs/api/qiskit-addon-cutting/release-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Circuit Cutting release notes
-description: Changes made to Circuit Cutting
+title: Circuit cutting release notes
+description: Changes made to Circuit cutting
 in_page_toc_max_heading_level: 2
 ---
 
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
-# Circuit Cutting release notes
+# Circuit cutting release notes
 
 <span id="release-notes-0-9-0" />
 
