--- a/docs/api/qiskit-addon-sqd/release-notes.mdx
+++ b/docs/api/qiskit-addon-sqd/release-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Sample-Based Quantum Diagonalization release notes
-description: Changes made to Sample-Based Quantum Diagonalization
+title: Sample-based quantum diagonalization release notes
+description: Changes made to Sample-based quantum diagonalization
 in_page_toc_max_heading_level: 2
 ---
 
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
-# Sample-Based Quantum Diagonalization release notes
+# Sample-based quantum diagonalization release notes
 
 <span id="release-notes-0-7-0" />
 
