--- a/docs/api/qiskit-addon-utils/release-notes.mdx
+++ b/docs/api/qiskit-addon-utils/release-notes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Qiskit Addon Utilities release notes
-description: Changes made to Qiskit Addon Utilities
+title: Qiskit addon utilities release notes
+description: Changes made to Qiskit addon utilities
 in_page_toc_max_heading_level: 2
 ---
 
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
-# Qiskit Addon Utilities release notes
+# Qiskit addon utilities release notes
 
 <span id="release-notes-0-1-0" />
 
