--- a/docs/api/qiskit-ibm-runtime/release-notes.mdx
+++ b/docs/api/qiskit-ibm-runtime/release-notes.mdx
@@ -1,12 +1,12 @@
 ---
-title: Qiskit Runtime Client release notes
-description: Changes made to Qiskit Runtime Client
+title: Qiskit Runtime client release notes
+description: Changes made to Qiskit Runtime client
 in_page_toc_max_heading_level: 2
 ---
 
 <span id="qiskit-runtime-ibm-client-release-notes" />
 
-# Qiskit Runtime Client release notes
+# Qiskit Runtime client release notes
 
 <span id="id1" />
 
