--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -378,7 +378,7 @@
    ],
    "source": [
     "import networkx as nx\n",
-    "from sympy import symbols, Poly\n",
+    "from sympy import symbols, Poly, srepr\n",
     "\n",
     "# To change the weights, change the seed to any integer.\n",
     "rng_seed = 18\n",
@@ -469,7 +469,7 @@
    "source": [
     "# Solve the problem\n",
     "mvc_job = solver.run(\n",
-    "    problem=sympy.srepr(cost_function), instance=hub + \"/\" + group + \"/\" + project\n",
+    "    problem=srepr(cost_function), instance=hub + \"/\" + group + \"/\" + project\n",
     ")"
    ]
   },
