--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -76,6 +76,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "613c4d93",
+   "metadata": {
+     "tags": [
+       "remove-cell"
+     ]
+   },
+   "outputs": [],
+   "source": [
+    "# This cell is hidden from users\n",
+    "# It stops the linter complaining about undefined variables\n",
+    "# ruff: noqa: F821"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "95a715d2",
    "metadata": {},
    "outputs": [],
