--- a/docs/guides/construct-circuits.ipynb
+++ b/docs/guides/construct-circuits.ipynb
@@ -10,6 +10,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e11dd8ad-7edc-4cf8-bc13-388fe04e84fa",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c50d8e43-ae82-4e41-8d17-a37332d1bf6d",
    "metadata": {},
    "source": [
