--- a/docs/guides/create-transpiler-plugin.ipynb
+++ b/docs/guides/create-transpiler-plugin.ipynb
@@ -5,8 +5,39 @@
    "id": "58b1f0a7-d62e-4f71-ba01-b8f0beaeeb83",
    "metadata": {},
    "source": [
-    "# Create a transpiler plugin\n",
+    "# Create a transpiler plugin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec7b7a4-5318-4422-ab3d-c88cee551eaa",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7f87a76-b7a1-4dbb-ad45-55ff63c4665b",
+   "metadata": {},
+   "source": [
     "Creating a [transpiler plugin](transpiler-plugins) is a great way to share your transpilation code with the wider Qiskit community, allowing other users to benefit from the functionality you've developed. Thank you for your interest in contributing to the Qiskit community!\n",
     "\n",
     "Before you create a transpiler plugin, you need to decide what kind of plugin is appropriate for your situation. There are three kinds of transpiler plugins:\n",
