--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -11,6 +11,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a2510a7-1f0a-40d4-914b-68bffff7a27a",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c0d59170-4f83-4396-9f35-ad78300d6b89",
    "metadata": {},
    "source": [
@@ -118,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5cba81b8-058e-4626-a72b-fad91a00410c",
    "metadata": {},
    "outputs": [],
