--- a/docs/guides/operator-class.ipynb
+++ b/docs/guides/operator-class.ipynb
@@ -5,8 +5,39 @@
    "id": "b88d9242-a6f2-47b6-8e0a-daf60d0c4374",
    "metadata": {},
    "source": [
-    "# The Operator class\n",
+    "# The Operator class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a7539be-eb3f-4a29-8a76-ea9c93559142",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4d8e3f-5efb-4223-a15b-d6ef541370dc",
+   "metadata": {},
+   "source": [
     "This page shows how to use the [`Operator`](/api/qiskit/qiskit.quantum_info.Operator) class. For a high-level overview of operator representations in Qiskit, including the `Operator` class and others, see [Overview of operator classes](./operators-overview)."
    ]
   },
@@ -628,7 +659,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process fidelity = 1.0\n"
+      "Process fidelity ="
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 1.0\n"
      ]
     }
    ],
