--- a/docs/guides/save-circuits.ipynb
+++ b/docs/guides/save-circuits.ipynb
@@ -5,8 +5,39 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Save circuits to disk\n",
+    "# Save circuits to disk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cd24003-6d72-432a-8573-7a4809e3411c",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aeaa5b8-c8f5-4448-9d72-1a2452d79f74",
+   "metadata": {},
+   "source": [
     "Use [QPY serialization](/api/qiskit/qpy) to save your circuit to file. QPY files store the full Qiskit circuit object and will be compatible with newer versions of Qiskit (although not necessarily with older versions of Qiskit).\n",
     "\n",
     "To demonstrate, the following cell creates a simple quantum circuit."
