--- a/docs/guides/specify-observables-pauli.ipynb
+++ b/docs/guides/specify-observables-pauli.ipynb
@@ -5,8 +5,39 @@
    "id": "212400e8-9fb9-4969-982c-8e13b369ef3d",
    "metadata": {},
    "source": [
-    "# Specify observables in the Pauli basis\n",
+    "# Specify observables in the Pauli basis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c3654c-0235-44c4-9223-2251c24ef060",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
     "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9c68a4e-189c-424b-9255-24226307c8ac",
+   "metadata": {},
+   "source": [
     "In quantum mechanics, observables correspond to physical properties that can be measured.\n",
     "When considering a system of spins, for example, you could be interested in measuring the system's energy or obtaining information about the alignment of the spins, such as the magnetization or the correlations between spins.\n",
     "\n",
