--- a/docs/guides/visualize-circuits.ipynb
+++ b/docs/guides/visualize-circuits.ipynb
@@ -10,6 +10,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ea76afb-aecf-4ea2-b173-5d5e7e7d68ec",
+   "metadata": {
+    "tags": [
+     "version-info"
+    ]
+   },
+   "source": [
+    "<details>\n",
+    "<summary><b>Package versions</b></summary>\n",
+    "\n",
+    "The code on this page was developed using the following requirements.\n",
+    "We recommend using these versions or newer.\n",
+    "\n",
+    "```\n",
+    "qiskit[all]~=1.2.4\n",
+    "qiskit-aer~=0.15.1\n",
+    "qiskit-ibm-runtime~=0.31.0\n",
+    "qiskit-serverless~=0.17.1\n",
+    "qiskit-ibm-catalog~=0.1\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd5865b3-adfa-4c87-be55-51f693335184",
    "metadata": {},
    "source": [
