Add qiskit-addon-aqc-tensor to addons.mdx

--- a/docs/guides/addons.mdx
+++ b/docs/guides/addons.mdx
@@ -9,6 +9,13 @@ Qiskit addons are a collection of research capabilities for enabling algorithm d
 
 ## Addons for mapping
 
+### Approximate quantum compilation with tensor networks
+
+Approximate quantum compilation with tensor networks (AQC-Tensor) enables the construction of high-fidelity circuits with reduced depth.
+
+- Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-aqc-tensor)
+- Read the [documentation.](https://qiskit.github.io/qiskit-addon-aqc-tensor)
+
 ### Multi-product formulas
 
 Multi-product formulas (MPF) reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
